k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: backend
  name: backend
spec:
  sessionAffinity: None
  ports:
    - port: 8181
      name: http
  selector:
    component: backend
