k8s/feed-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: feed
  name: feed
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 8182
      name: http
  selector:
    component: feed
