k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: frontend
  name: frontend
spec:
  sessionAffinity: ClientIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    component: frontend
