k8s/rethinkdb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  type: LoadBalancer
  ports:
   - port: 8080
     targetPort: admin
  selector:
    db: rethinkdb
    role: admin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb
spec:
  ports:
    - port: 29015
      targetPort: cluster
  selector:
    db: rethinkdb
    role: replica
---
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-proxy
spec:
  type: LoadBalancer
  ports:
    - port: 28015
      targetPort: driver
  selector:
    db: rethinkdb
    role: proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-replica
spec:
  template:
    metadata:
      labels:
        db: rethinkdb
        role: replica
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        args:
          - "--cache-size"
          - "10240"
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        resources:
          requests:
            memory: 10Gi
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: rethinkdb-storage
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      volumes:
      - name: rethinkdb-storage
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  template:
    metadata:
      labels:
        db: rethinkdb
        role: admin
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-proxy
spec:
  template:
    metadata:
      labels:
        db: rethinkdb
        role: proxy
    spec:
      containers:
      - image: rosskukulinski/rethinkdb-kubernetes:2.3.5
        imagePullPolicy: Always
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        livenessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /ready-probe.sh
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
