k8s/traefik.yaml
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
        version: v1.0.0
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.0.0
        name: traefik-ingress-lb
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --web
        - --kubernetes
        - --entrypoints='Name:http Address::80'
        - --defaultentrypoints=http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  namespace: kube-system
  name: traefik
spec:
  sessionAffinity: ClientIP
  type: NodePort
  ports:
    - port: 80
      nodePort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
    - port: 8080
      targetPort: 8080
      name: mgt
  selector:
    k8s-app: traefik-ingress-lb
